<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/myFirstColor"
    android:fitsSystemWindows="true"
    tools:context=".AddActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_add_activity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height_add_activity"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.CookBook.AppBarOverlay" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".AddActivity"
        tools:showIn="@layout/activity_add_edit">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/add_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_upper_margin_add_activity"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_title"
                android:textColor="?attr/mySecondColor"
                android:textSize="36sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/insert_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:autofillHints="@string/add_insert_title"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/add_insert_title"
                android:inputType="textShortMessage"
                android:textColor="?attr/myThirdColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_title" />

            <TextView
                android:id="@+id/add_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_ingredients"
                android:textColor="?attr/mySecondColor"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insert_title" />

            <ImageButton
                android:id="@+id/button_add_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/main_orange"
                android:contentDescription="@string/button_plus_content_description"
                android:onClick="onClickAddIngredient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insert_title"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <LinearLayout
                android:id="@+id/linLayout_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_ingredients"/>

            <TextView
                android:id="@+id/add_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_steps"
                android:textColor="?attr/mySecondColor"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linLayout_ingredients" />

            <ImageButton
                android:id="@+id/button_add_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/main_orange"
                android:contentDescription="@string/button_plus_content_description"
                android:onClick="onClickAddSteps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linLayout_ingredients"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <LinearLayout
                android:id="@+id/linLayout_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_steps"/>

            <TextView
                android:id="@+id/add_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_people"
                android:textColor="?attr/mySecondColor"
                android:textSize="36sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linLayout_steps" />

            <TextView
                android:id="@+id/insert_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/add_people_starting_value"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/increase_people"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_people"
                app:layout_constraintTop_toTopOf="@+id/increase_people" />

            <ImageButton
                android:id="@+id/increase_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/main_orange"
                android:contentDescription="@string/button_plus_content_description"
                android:onClick="onClickIncreasePeople"
                app:layout_constraintBottom_toBottomOf="@+id/add_people"
                app:layout_constraintStart_toEndOf="@+id/insert_people"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <ImageButton
                android:id="@+id/decrease_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/main_orange"
                android:contentDescription="@string/button_minus_content_description"
                android:onClick="onClickDecreasePeople"
                app:layout_constraintBottom_toBottomOf="@+id/add_people"
                app:layout_constraintEnd_toStartOf="@+id/insert_people"
                app:srcCompat="@drawable/ic_baseline_remove_24" />

            <TextView
                android:id="@+id/add_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_price"
                android:textColor="?attr/mySecondColor"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_people" />

            <RatingBar
                android:id="@+id/ratingBar_price"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:numStars="3"
                android:progressDrawable="@drawable/euro_rating_bar"
                android:rating="1"
                android:stepSize="1"
                app:layout_constraintBottom_toBottomOf="@+id/add_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_price"
                app:layout_constraintTop_toTopOf="@+id/add_price" />

            <TextView
                android:id="@+id/add_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_duration"
                android:textColor="?attr/mySecondColor"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_price" />

            <TextView
                android:id="@+id/add_preparation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/add_preparation_time"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_duration" />

            <TextView
                android:id="@+id/add_cooking_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/add_cooking_time"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_preparation_time" />

            <EditText
                android:id="@+id/edt_prepa_hour"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:autofillHints="@string/add_hint_time"
                android:ems="10"
                android:hint="@string/add_hint_time"
                android:inputType="time"
                android:textColor="?attr/myThirdColor"
                app:layout_constraintBottom_toBottomOf="@+id/hour_prepa"
                app:layout_constraintEnd_toStartOf="@+id/hour_prepa"
                app:layout_constraintTop_toTopOf="@+id/hour_prepa" />

            <TextView
                android:id="@+id/hour_prepa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/add_hour"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_preparation_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.35"
                app:layout_constraintStart_toEndOf="@+id/add_preparation_time"
                app:layout_constraintTop_toTopOf="@+id/add_preparation_time" />

            <EditText
                android:id="@+id/edt_prepa_min"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:autofillHints="@string/add_hint_time"
                android:ems="10"
                android:hint="@string/add_hint_time"
                android:inputType="time"
                android:textColor="?attr/myThirdColor"
                app:layout_constraintBottom_toBottomOf="@+id/hour_prepa"
                app:layout_constraintStart_toEndOf="@+id/hour_prepa"
                app:layout_constraintTop_toTopOf="@+id/hour_prepa" />

            <TextView
                android:id="@+id/min_prepa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/add_minutes"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_preparation_time"
                app:layout_constraintStart_toEndOf="@+id/edt_prepa_min"
                app:layout_constraintTop_toTopOf="@+id/add_preparation_time" />

            <EditText
                android:id="@+id/edt_cooking_hour"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:autofillHints="@string/add_hint_time"
                android:ems="10"
                android:hint="@string/add_hint_time"
                android:inputType="time"
                android:textColor="?attr/myThirdColor"
                app:layout_constraintBottom_toBottomOf="@+id/hour_cooking"
                app:layout_constraintEnd_toStartOf="@+id/hour_cooking"
                app:layout_constraintTop_toTopOf="@+id/hour_cooking" />

            <TextView
                android:id="@+id/hour_cooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/add_hour"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_cooking_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.35"
                app:layout_constraintStart_toEndOf="@+id/add_cooking_time"
                app:layout_constraintTop_toTopOf="@+id/add_cooking_time" />

            <EditText
                android:id="@+id/edt_cooking_min"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:autofillHints="@string/add_hint_time"
                android:ems="10"
                android:hint="@string/add_hint_time"
                android:inputType="time"
                android:textColor="?attr/myThirdColor"
                app:layout_constraintBottom_toBottomOf="@+id/hour_cooking"
                app:layout_constraintStart_toEndOf="@+id/hour_cooking"
                app:layout_constraintTop_toTopOf="@+id/hour_cooking" />

            <TextView
                android:id="@+id/min_cooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/add_minutes"
                android:textColor="?attr/myThirdColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/add_cooking_time"
                app:layout_constraintStart_toEndOf="@+id/edt_cooking_min"
                app:layout_constraintTop_toTopOf="@+id/add_cooking_time" />

            <Button
                android:id="@+id/add_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="200dp"
                android:backgroundTint="?attr/myFourthColor"
                android:onClick="onClickConfirm"
                android:text="@string/add_confirm_button"
                android:textColor="?attr/mySecondColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_cooking_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>